--- a/Automailapp_MrQuang/App.config
+++ b/Automailapp_MrQuang/App.config
@@ -1,6 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Automailapp_MrQuang.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <Automailapp_MrQuang.Properties.Settings>
+            <setting name="SettingLogin_DistanceUsPa" serializeAs="String">
+                <value>1000 3000</value>
+            </setting>
+            <setting name="SettingLogin_DistanceLetterInput" serializeAs="String">
+                <value>600 1000</value>
+            </setting>
+            <setting name="SettingLogin_DistancePaLogin" serializeAs="String">
+                <value>2000 3000</value>
+            </setting>
+            <setting name="Userfb" serializeAs="String">
+                <value>Vui lòng nhập </value>
+            </setting>
+            <setting name="Passfb" serializeAs="String">
+                <value>Vui lòng nhập</value>
+            </setting>
+            <setting name="NumberPost" serializeAs="String">
+                <value>50</value>
+            </setting>
+        </Automailapp_MrQuang.Properties.Settings>
+    </userSettings>
 </configuration>
